# CheckersGUI

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/UI/: GameWindow.cpp  GameWindow.h
src/debug/: CMakeLists.txt  debug.cpp  debug.h
src/game/: CMakeLists.txt  GameLoop.cpp  GameLoop.h  Token.h
src/ui/: BoardTile.cpp  BoardTile.h  CMakeLists.txt  ChoosePlayers.cpp  ChoosePlayers.h  GameBoard.cpp  GameBoard.h  MainWindow.cpp  MainWindow.h  Token.cpp  Token.h
